--- a/styles/mainStyle.css
+++ b/styles/mainStyle.css
@@ -1,3 +1,27 @@
+.removeStyles {
+    all: initial;
+  }
+  
+.removeStyles * {
+    all: unset
+}
+
 html {
     scroll-behavior: smooth;
+}
+
+a {
+    @apply font-semibold text-indigo-400 hover:underline
+}
+
+div.markdown * {
+    @apply text-gray-200
+}
+
+div.markdown code::before, div.markdown code::after {
+    content: "";
+}
+
+div.markdown code:not(pre>code) {
+    @apply text-gray-100 border-0 rounded-md bg-gray-100 bg-opacity-10
 }
